--- a/src/components/layout/PortfolioPreview.module.scss
+++ b/src/components/layout/PortfolioPreview.module.scss
@@ -47,6 +47,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        color: #000;
         
         :nth-child(1) {
           transition: all .3s ease;
