--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
