--- a/src/components/layout/MainNavigation.module.scss
+++ b/src/components/layout/MainNavigation.module.scss
@@ -1,22 +1,150 @@
+.container {
+  //height: 150px;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
 .mainNav {
   display: flex;
   justify-content: flex-end;
-  padding: 10px 0;
-  background-color: rgba(#000, .2);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1;
+  //padding: 10px 0;
+  transition: all 0.5s ease;
+  position: relative;
 
   :nth-child(1) {
     margin-right: auto;
   }
+
+  @media (max-width: 700px) {
+    .dropMenuBtnBox {
+      width: 70px;
+      //height: 100%;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      display: flex;
+      align-items: center;
+      .dropMenuBtn {
+        height: 22px;
+        width: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-right: 30px;
+        cursor: pointer;
+        position: absolute;
+        //top:40;
+        //right: 0;
+        z-index: 2222;
+  
+        & div {
+          width: 100%;
+          height: 3px;
+          background-color: #fff;
+          transform-origin: 6px;
+          transition: all 0.3s ease;
+          border-radius: 5px;
+        }
+      }
+      .dropMenuBtnClosed {
+        :first-child {
+          transform: rotateZ(0deg);
+        }
+        :nth-child(2) {
+          transform: translateX(0%);
+          opacity: 1;
+        }
+        :nth-child(3) {
+          transform: rotateZ(0deg);
+        }
+      }
+      .dropMenuBtnOpened {
+        :first-child {
+          transform: rotateZ(45deg);
+        }
+        :nth-child(2) {
+          transform: translateX(100%);
+          opacity: 0;
+        }
+        :nth-child(3) {
+          transform: rotateZ(-45deg);
+        }
+      }
+    }
+    .menu {
+      position: absolute;
+      flex-direction: column;
+      height: 300px;
+      top:100%;
+      display: none;
+      a {
+        height: 33%;
+        .customMdBtn {
+          width: 100%;
+          background-color: #000;
+
+          &:hover {
+            background-color: #fff;
+          }
+        }
+      }
+    }
+    .menuEnter {
+      display: flex;
+      transform: translateX(100%);
+    }
+    .menuDone {
+      display: flex;
+      transition: all 0.3s ease;
+    }
+    .menuExit {
+      display: flex;
+      transition: all 0.3s ease;
+      transform: translateX(100%);
+    }
+    .menuExitDone {
+      transition: all 0.3s ease;
+      display: none;
+    }
+  }
+}
+.darkBg {
+  background-color: rgba(#000, .3);
+}
+.lightBg {
+  background-color: rgba(#000, .0);
 }
 .logo {
+  margin-left: 30px;
+  width: 150px;
+}
+.logo1 {
+  margin-left: 30px;
+  width: 8vw;
 }
 .customMdBtn {
-  margin-right: 20px !important;
-  background-color: rgb(240, 240, 240) !important;
-  background-color: #fff !important;
+  border: none;
+  //border-left: 1px solid #fff;
+  background-color: rgba(#000, .8);
+  padding: 0 30px;
+  font-size: 20px;
+  margin-right: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  color: rgba(#fff, .8);
+  letter-spacing: 5px;
+  height: 100%;
+
+  &:hover {
+    background-color: rgba(#fff, $alpha: .5);
+    color: rgba(#000, .9);
+  }
+}
+.lightBtn {
+  background-color: rgba(#000, .3);
+}
+.darkBtn {
+  background-color: rgba(#000, .8);
 }
