--- a/src/components/layout/PortfolioPreview.module.scss
+++ b/src/components/layout/PortfolioPreview.module.scss
@@ -7,6 +7,11 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  .bgMask {
+    background-color: rgba(#000, .7);
+    width: 100%;
+    height: 100%;
+  }
   .seeMoreBox {
     position: absolute;
     bottom: 50px;
@@ -18,10 +23,10 @@
       color: #fff;
       background-color: rgba(#000, .7);
       padding: 0 20px;
-      border-left: 15px solid red;
+      border-left: 15px solid rgb(50,50,50);
     }
     .seeMoreBtn {
-      background-color: transparent;
+      background-color: rgba(#fff, .7);
       border: 5px solid #fff;
       border-radius: 50%;
       width: 145px;
