--- a/src/components/layout/Slider.module.scss
+++ b/src/components/layout/Slider.module.scss
@@ -3,6 +3,41 @@
   overflow: hidden;
   position: relative;
   z-index: 0;
+  .textBox {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    //display: flex;
+    //align-items: flex-end;
+    .boxMask {
+      //background-color: rgba(#fff, .7);
+      height: 70%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .logo {
+        width: 200px;
+        height: 200px;
+      }
+    }
+    .text {
+      //position: absolute;
+      color: #fff;
+      font-size: 4vw;
+      font-weight: 300;
+      //top:70%;
+      //left: 0%;
+      width: 100%;
+      height: 30%;
+      background-color: rgba(#000, .7);
+      display: flex;
+      align-items: center;
+      padding-left: 50px;
+  
+      //padding: 3vw 50px 3vw 15px;
+      border-left: 1vw solid #000;
+    }
+  }
 
   img {
     position: absolute;
@@ -18,17 +53,6 @@
     }
   }
 
-  .slideText {
-    position: absolute;
-    color: #fff;
-    font-size: 4vw;
-    font-weight: 300;
-    top:25%;
-    left: 10%;
-
-    padding: 2vw 0 2vw 15px;
-    border-left: 1vw solid #000;
-  }
 }
 
 @media (min-width: 1080px) {
