--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
