--- a/src/components/layout/Card.module.scss
+++ b/src/components/layout/Card.module.scss
@@ -1,8 +1,9 @@
 .iconBox {
-  padding: 20px 50px;
+  padding: 20px 30px;
   border-radius: 5px !important;
   width: 300px;
   background-color: rgba(#000, 0.8);
+  margin: 20px 20px;
 
   h1 {
     color: #fff;
@@ -15,4 +16,28 @@
     margin:0;
     padding: 0;
   }
+}
+.materialIcons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
