--- a/src/components/Gallery.module.scss
+++ b/src/components/Gallery.module.scss
@@ -2,14 +2,15 @@
   display: none;
 }
 .galleryContainer {
+  padding-top: 150px;
   width: 100%;
   position: absolute;
-  height: 75vh;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   //padding-top: 10px;
-  z-index: 1000;
+  z-index: 2000;
   background-color: rgba(#000, $alpha: .8);
 
   .exitBtn {
@@ -50,26 +51,38 @@
   }
   .pickedImg {
     display: flex;
+    width: 100%;
+    position: relative;
+    justify-content: center;
     button {
       border: none;
-      margin: 0 20px;
+      position: absolute;
+      bottom: 20px;
+      //transform: translateY(-0%);
 
       &:hover {
         background-color: rgba(#fff, $alpha: .5);
       }
     }
-  }
-
-  img {
-    //height: 55vh;
-    width: 40vw;
+    .nextImgBtn {
+      right: 10px;
+    }
+    .prevImgBtn {
+      left: 10px;
+    }
+    img {
+      //height: 55vh;
+      width: 100%;
+    }
   }
   .otherImages {
-    width: 80vw;
+    width: 100%;
     //height: 100%;
-    display: flex;
-    justify-content: space-around;
+    // display: flex;
+    //justify-content: space-around;
+    display: inline-flex;
     padding: 20px 0;
+    overflow-x: scroll;
   }
 }
 
