--- a/src/components/layout/MainNavigation.module.scss
+++ b/src/components/layout/MainNavigation.module.scss
@@ -18,6 +18,10 @@
   }
 
   @media (max-width: 700px) {
+    .logo {
+      margin-left: 30px;
+      width: 20vw;
+    }
     .dropMenuBtnBox {
       width: 70px;
       //height: 100%;
@@ -42,7 +46,7 @@
         & div {
           width: 100%;
           height: 3px;
-          background-color: #fff;
+          background-color: #000;
           transform-origin: 6px;
           transition: all 0.3s ease;
           border-radius: 5px;
@@ -117,10 +121,6 @@
   background-color: rgba(#000, .0);
 }
 .logo {
-  margin-left: 30px;
-  width: 150px;
-}
-.logo1 {
   margin-left: 30px;
   width: 8vw;
 }
