--- a/src/components/layout/PortfolioPreview.module.scss
+++ b/src/components/layout/PortfolioPreview.module.scss
@@ -11,51 +11,54 @@
     background-color: rgba(#000, .7);
     width: 100%;
     height: 100%;
-  }
-  .seeMoreBox {
-    position: absolute;
-    bottom: 50px;
-    left: 100px;
     display: flex;
-    .title {
-      margin: 0;
-      font-size: 120px;
-      color: #fff;
-      background-color: rgba(#000, .7);
-      padding: 0 20px;
-      border-left: 15px solid rgb(50,50,50);
-    }
-    .seeMoreBtn {
-      background-color: rgba(#fff, .7);
-      border: 5px solid #fff;
-      border-radius: 50%;
-      width: 145px;
-      margin-left: 50px;
-      position: relative;
-      cursor: pointer;
-      transition: all .3s ease;
-
-      &:hover {
-        background-color: rgba(#000, .5);
-        border: none;
-        .iconBox {
-          :nth-child(1) {
-            transform: scale(1.3, 1.3);
+    align-items: flex-end;
+    .seeMoreBox {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      .title {
+        margin: 0;
+        color: #fff;
+        background-color: rgba(#000, .7);
+        padding: 0;
+        font-weight: 300;
+        font-size: 10vw;
+        border-left: 2vw solid rgb(50,50,50);
+        padding-left: 10px;
+      }
+      .seeMoreBtn {
+        background-color: rgba(#fff, .7);
+        border-radius: 50%;
+        position: relative;
+        cursor: pointer;
+        transition: all .3s ease;
+        height: 10vw;
+        width: 10vw;
+        border: 0.5vw solid #fff;
+        margin-left: 30px;
+        &:hover {
+          background-color: rgba(#000, .5);
+          border: none;
+          .iconBox {
+            :nth-child(1) {
+              transform: scale(1.3, 1.3);
+            }
           }
         }
-      }
-
-      .iconBox {
-        animation: mymove 2s infinite;
-        animation-timing-function: linear;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #000;
-        
-        :nth-child(1) {
-          transition: all .3s ease;
+  
+        .iconBox {
+          animation: mymove 2s infinite;
+          animation-timing-function: linear;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          color: #000;
+          
+          :nth-child(1) {
+            transition: all .3s ease;
+          }
         }
       }
     }
@@ -66,4 +69,75 @@
   33% {left: 55%;}
   66% {left: 45%;}
   100% {left: 50%;}
+}
+// @media (max-width: 3000px) {
+//   .container {
+//     .seeMoreBox {
+//       .title {
+//         font-size: 1vw;
+//       }
+//     }
+//   }
+// }
+@media (max-width: 1024px) {
+  .container {
+    height: 50vw;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    height: 100vw;
+    .bgMask {
+      align-items: center;
+      .seeMoreBox {
+        bottom: 20%;
+        //flex-wrap: wrap;
+        flex-direction: column;
+        .title {
+          padding: 10px 0;
+          text-align: center;
+          margin-bottom: 20px;
+          width: 100%;
+          border-left: 4vw solid rgb(50,50,50);
+        }
+        .seeMoreBtn {
+          width: 20vw;
+          height: 20vw;
+          margin-left: 0;
+          .iconBox {
+
+            :nth-child(1) {
+              font-size: 15vw !important;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.materialIcons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
